Fixed large images overflowing the content area

--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -294,3 +294,7 @@ footer {
 	text-align: center;
 	padding: 10px 0;
 }
+
+.post img {
+	max-width: 900px;
+}
